--- a/index.html
+++ b/index.html
@@ -16,17 +16,33 @@
 
 		<div id="mainContainer">
 			<div class="containerContent">
-				<h2>Version 1.5: <button class="btn"><i class="fa fa-download"></i> <a href="https://github.com/RIDY01/DylansPowerShellScript/raw/main/Dylans_PS_Script1.5.exe" download>Download</a></button></h2>
-				<div id="changelogsContainer">
+				<h2>Version 1.7: <button class="btn"><i class="fa fa-download"></i> <a href="https://github.com/RIDY01/DylansPowerShellScript/raw/main/Dylans_PS_Script1.7.exe" download>Download</a></button></h2>
+				<div class="changelogsContainer">
 					<br>
+					<h3>Release: 21.06.2022</h3>
 					<h3>Changelogs:</h3>
-						<p style="color: lawngreen">	(+) Cortana is now removable</p>
-						<p style="color: lawngreen">	(+) You can choose if you want to open the start-up folder</p>
-						<p style="color: lawngreen">	(+) Color messages help now to recognise the issue</p>
+						<p style="color: lawngreen">	(+) Added query user and netstat commands in suspicious activities</p>
+						<p style="color: lawngreen">	(+) If you do not run this script as admin, an error message shows up</p>
 						<p style="color:yellow;">		(!) Bug fixes</p>
-						<p style="color:red;">			(-) Cortana Package cannot always be removed causing windows builds</p>
 				</div>
 			</div>
+			<br>
+			<hr color="green">
+			<br>
+			<div class="containerContent">
+				<h2>Version 1.5: <button class="btn"><i class="fa fa-download"></i> <a href="https://github.com/RIDY01/DylansPowerShellScript/raw/main/Dylans_PS_Script1.5.exe" download>Download</a></button></h2>
+				<div class="changelogsContainer">
+					<br>
+					<h3>Release: 16.05.2022</h3>
+					<h3>Changelogs:</h3>
+					<p style="color: lawngreen">	(+) Cortana is now removable</p>
+					<p style="color: lawngreen">	(+) You can choose if you want to open the start-up folder</p>
+					<p style="color: lawngreen">	(+) Color messages help now to recognise the issue</p>
+					<p style="color:yellow;">		(!) Bug fixes</p>
+					<p style="color:red;">			(-) Cortana Package cannot always be removed causing windows builds</p>
+				</div>
+			</div>
+			<br>
 		</div>
 	</main>
 	<footer>
@@ -84,7 +100,7 @@
 			text-align: center;
 		}
 
-		#changelogsContainer{
+		.changelogsContainer{
 			margin: auto;
 			width: 30vw;
 		}
