--- a/index.html
+++ b/index.html
@@ -63,14 +63,6 @@
 			color:black;
 			text-shadow: 1px 1px limegreen;
 		}
-		@media screen and (min-width: 1600px) {
-			h1 {
-				font-size: 20pt;
-				color:black;
-				text-shadow: 1px 1px limegreen;
-			}
-		}
-
 
 		header{
 			background-image: linear-gradient(180deg, #4e9c5e, green, black);
@@ -144,6 +136,18 @@
 			margin-left: 1vh;
 		}
 
+		@media screen and (min-width: 1600px) {
+			h1 {
+				font-size: 20pt;
+				color:black;
+				text-shadow: 1px 1px limegreen;
+			}
+
+			#mainContainer {
+				margin:5vh auto auto 0.5vh;
+			}
+
+		}
 	</style>
 </body>
 </html>
