--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 
 		<div id="mainContainer">
 			<div class="containerContent">
+				<h2>Version 1.8: <button class="btn"><i class="fa fa-download"></i> <a href="https://github.com/RIDY01/DylansPowerShellScript/raw/main/Dylans_PS_Script1.8.exe" download>Download</a></button></h2>
+				<div class="changelogsContainer">
+					<br>
+					<h3>Release: 22.06.2022</h3>
+					<h3>Changelogs:</h3>
+					<p style="color: lawngreen">	(+) New UI changes</p>
+					<p style="color: lawngreen">	(+) Added DNS flush option</p>
+					<p style="color: lawngreen">(+) Source code restructured	</p>
+				</div>
+			</div>
+			<br>
+			<hr color="green">
+			<br>
+			<div class="containerContent">
 				<h2>Version 1.7: <button class="btn"><i class="fa fa-download"></i> <a href="https://github.com/RIDY01/DylansPowerShellScript/raw/main/Dylans_PS_Script1.7.exe" download>Download</a></button></h2>
 				<div class="changelogsContainer">
 					<br>
