--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<p style="color: lawngreen">	(+) You can choose if you want to open the start-up folder</p>
 					<p style="color: lawngreen">	(+) Color messages help now to recognise the issue</p>
 					<p style="color:yellow;">		(!) Bug fixes</p>
-					<p style="color:red;">			(-) Cortana Package cannot always be removed causing windows builds</p>
+					<p style="color:red;">			(-) The Cortana Package cannot always be removed due to the different window builds!</p>
 				</div>
 			</div>
 			<br>
